--- a/Day24/soln_day24.ipynb
+++ b/Day24/soln_day24.ipynb
@@ -563,7 +563,475 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5.create another file lsf2 by replacing all the spaces with ',' use tr command tr ' ' ',' < lsf1 > lsf2"
+    "### 5.create another file lsf2 by replacing all the spaces with ',' "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# tr ' ' ',' <lsf1 >lsf2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6.create another file lsf3 by squeezing multiple ',' use tr command - tr -s ',' < lsf2 > lsf3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# tr -s ',' <lsf2 >lsf3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 7.using pandas read the file lsf3 and sort it based on file size (fifth column)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-rw-rw-r--</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ai16</td>\n",
+       "      <td>ai16</td>\n",
+       "      <td>34</td>\n",
+       "      <td>Nov</td>\n",
+       "      <td>1</td>\n",
+       "      <td>14:33</td>\n",
+       "      <td>compressed.py</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>drwxrwxr-x</td>\n",
+       "      <td>2</td>\n",
+       "      <td>ai16</td>\n",
+       "      <td>ai16</td>\n",
+       "      <td>4096</td>\n",
+       "      <td>Oct</td>\n",
+       "      <td>24</td>\n",
+       "      <td>15:39</td>\n",
+       "      <td>day2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>drwxr-xr-x</td>\n",
+       "      <td>5</td>\n",
+       "      <td>ai16</td>\n",
+       "      <td>ai16</td>\n",
+       "      <td>4096</td>\n",
+       "      <td>Nov</td>\n",
+       "      <td>30</td>\n",
+       "      <td>14:08</td>\n",
+       "      <td>Desktop</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>drwxrwxr-x</td>\n",
+       "      <td>2</td>\n",
+       "      <td>ai16</td>\n",
+       "      <td>ai16</td>\n",
+       "      <td>4096</td>\n",
+       "      <td>Oct</td>\n",
+       "      <td>24</td>\n",
+       "      <td>15:15</td>\n",
+       "      <td>dir1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>drwxrwxr-x</td>\n",
+       "      <td>2</td>\n",
+       "      <td>ai16</td>\n",
+       "      <td>ai16</td>\n",
+       "      <td>4096</td>\n",
+       "      <td>Oct</td>\n",
+       "      <td>23</td>\n",
+       "      <td>14:50</td>\n",
+       "      <td>dir2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "            0  1     2     3     4    5   6      7              8\n",
+       "0  -rw-rw-r--  1  ai16  ai16    34  Nov   1  14:33  compressed.py\n",
+       "1  drwxrwxr-x  2  ai16  ai16  4096  Oct  24  15:39           day2\n",
+       "2  drwxr-xr-x  5  ai16  ai16  4096  Nov  30  14:08        Desktop\n",
+       "3  drwxrwxr-x  2  ai16  ai16  4096  Oct  24  15:15           dir1\n",
+       "4  drwxrwxr-x  2  ai16  ai16  4096  Oct  23  14:50           dir2"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "data = pd.read_csv('~/lsf3',skiprows=1,header=None)\n",
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "      <th>1</th>\n",
+       "      <th>2</th>\n",
+       "      <th>3</th>\n",
+       "      <th>4</th>\n",
+       "      <th>5</th>\n",
+       "      <th>6</th>\n",
+       "      <th>7</th>\n",
+       "      <th>8</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td>-rw-rw-r--</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ai16</td>\n",
+       "      <td>ai16</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Dec</td>\n",
+       "      <td>3</td>\n",
+       "      <td>16:02</td>\n",
+       "      <td>lsf1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>-rw-rw-r--</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ai16</td>\n",
+       "      <td>ai16</td>\n",
+       "      <td>34</td>\n",
+       "      <td>Nov</td>\n",
+       "      <td>1</td>\n",
+       "      <td>14:33</td>\n",
+       "      <td>compressed.py</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td>-rwxr--r--</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ai16</td>\n",
+       "      <td>ai16</td>\n",
+       "      <td>265</td>\n",
+       "      <td>Apr</td>\n",
+       "      <td>18</td>\n",
+       "      <td>2016</td>\n",
+       "      <td>records1.txt</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td>-rw-rw-r--</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ai16</td>\n",
+       "      <td>ai16</td>\n",
+       "      <td>1059</td>\n",
+       "      <td>Oct</td>\n",
+       "      <td>30</td>\n",
+       "      <td>14:36</td>\n",
+       "      <td>Untitled.ipynb</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td>-rw-rw-r--</td>\n",
+       "      <td>1</td>\n",
+       "      <td>ai16</td>\n",
+       "      <td>ai16</td>\n",
+       "      <td>2818</td>\n",
+       "      <td>Oct</td>\n",
+       "      <td>31</td>\n",
+       "      <td>15:37</td>\n",
+       "      <td>Python_Exercises.zip</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td>drwxr-xr-x</td>\n",
+       "      <td>2</td>\n",
+       "      <td>ai16</td>\n",
+       "      <td>ai16</td>\n",
+       "      <td>4096</td>\n",
+       "      <td>Oct</td>\n",
+       "      <td>23</td>\n",
+       "      <td>14:19</td>\n",
+       "      <td>Templates</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>drwxrwxr-x</td>\n",
+       "      <td>3</td>\n",
+       "      <td>ai16</td>\n",
+       "      <td>ai16</td>\n",
+       "      <td>4096</td>\n",
+       "      <td>Oct</td>\n",
+       "      <td>24</td>\n",
+       "      <td>14:03</td>\n",
+       "      <td>R</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td>drwxrwxr-x</td>\n",
+       "      <td>4</td>\n",
+       "      <td>ai16</td>\n",
+       "      <td>ai16</td>\n",
+       "      <td>4096</td>\n",
+       "      <td>Oct</td>\n",
+       "      <td>31</td>\n",
+       "      <td>14:11</td>\n",
+       "      <td>python</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td>drwxr-xr-x</td>\n",
+       "      <td>2</td>\n",
+       "      <td>ai16</td>\n",
+       "      <td>ai16</td>\n",
+       "      <td>4096</td>\n",
+       "      <td>Oct</td>\n",
+       "      <td>23</td>\n",
+       "      <td>14:19</td>\n",
+       "      <td>Public</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td>drwxr-xr-x</td>\n",
+       "      <td>2</td>\n",
+       "      <td>ai16</td>\n",
+       "      <td>ai16</td>\n",
+       "      <td>4096</td>\n",
+       "      <td>Oct</td>\n",
+       "      <td>23</td>\n",
+       "      <td>14:19</td>\n",
+       "      <td>Pictures</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td>drwxrwxr-x</td>\n",
+       "      <td>5</td>\n",
+       "      <td>ai16</td>\n",
+       "      <td>ai16</td>\n",
+       "      <td>4096</td>\n",
+       "      <td>Nov</td>\n",
+       "      <td>2</td>\n",
+       "      <td>13:35</td>\n",
+       "      <td>nltk_data</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td>drwxr-xr-x</td>\n",
+       "      <td>2</td>\n",
+       "      <td>ai16</td>\n",
+       "      <td>ai16</td>\n",
+       "      <td>4096</td>\n",
+       "      <td>Dec</td>\n",
+       "      <td>3</td>\n",
+       "      <td>15:28</td>\n",
+       "      <td>Downloads</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>drwxr-xr-x</td>\n",
+       "      <td>2</td>\n",
+       "      <td>ai16</td>\n",
+       "      <td>ai16</td>\n",
+       "      <td>4096</td>\n",
+       "      <td>Oct</td>\n",
+       "      <td>23</td>\n",
+       "      <td>14:19</td>\n",
+       "      <td>Documents</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>drwxrwxr-x</td>\n",
+       "      <td>2</td>\n",
+       "      <td>ai16</td>\n",
+       "      <td>ai16</td>\n",
+       "      <td>4096</td>\n",
+       "      <td>Oct</td>\n",
+       "      <td>23</td>\n",
+       "      <td>14:50</td>\n",
+       "      <td>dir2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>drwxrwxr-x</td>\n",
+       "      <td>2</td>\n",
+       "      <td>ai16</td>\n",
+       "      <td>ai16</td>\n",
+       "      <td>4096</td>\n",
+       "      <td>Oct</td>\n",
+       "      <td>24</td>\n",
+       "      <td>15:15</td>\n",
+       "      <td>dir1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>drwxr-xr-x</td>\n",
+       "      <td>5</td>\n",
+       "      <td>ai16</td>\n",
+       "      <td>ai16</td>\n",
+       "      <td>4096</td>\n",
+       "      <td>Nov</td>\n",
+       "      <td>30</td>\n",
+       "      <td>14:08</td>\n",
+       "      <td>Desktop</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>drwxrwxr-x</td>\n",
+       "      <td>2</td>\n",
+       "      <td>ai16</td>\n",
+       "      <td>ai16</td>\n",
+       "      <td>4096</td>\n",
+       "      <td>Oct</td>\n",
+       "      <td>24</td>\n",
+       "      <td>15:39</td>\n",
+       "      <td>day2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td>drwxr-xr-x</td>\n",
+       "      <td>2</td>\n",
+       "      <td>ai16</td>\n",
+       "      <td>ai16</td>\n",
+       "      <td>4096</td>\n",
+       "      <td>Oct</td>\n",
+       "      <td>23</td>\n",
+       "      <td>14:19</td>\n",
+       "      <td>Music</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td>drwxr-xr-x</td>\n",
+       "      <td>2</td>\n",
+       "      <td>ai16</td>\n",
+       "      <td>ai16</td>\n",
+       "      <td>4096</td>\n",
+       "      <td>Oct</td>\n",
+       "      <td>23</td>\n",
+       "      <td>14:19</td>\n",
+       "      <td>Videos</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             0  1     2     3     4    5   6      7                     8\n",
+       "7   -rw-rw-r--  1  ai16  ai16     0  Dec   3  16:02                  lsf1\n",
+       "0   -rw-rw-r--  1  ai16  ai16    34  Nov   1  14:33         compressed.py\n",
+       "15  -rwxr--r--  1  ai16  ai16   265  Apr  18   2016          records1.txt\n",
+       "17  -rw-rw-r--  1  ai16  ai16  1059  Oct  30  14:36        Untitled.ipynb\n",
+       "13  -rw-rw-r--  1  ai16  ai16  2818  Oct  31  15:37  Python_Exercises.zip\n",
+       "16  drwxr-xr-x  2  ai16  ai16  4096  Oct  23  14:19             Templates\n",
+       "14  drwxrwxr-x  3  ai16  ai16  4096  Oct  24  14:03                     R\n",
+       "12  drwxrwxr-x  4  ai16  ai16  4096  Oct  31  14:11                python\n",
+       "11  drwxr-xr-x  2  ai16  ai16  4096  Oct  23  14:19                Public\n",
+       "10  drwxr-xr-x  2  ai16  ai16  4096  Oct  23  14:19              Pictures\n",
+       "9   drwxrwxr-x  5  ai16  ai16  4096  Nov   2  13:35             nltk_data\n",
+       "6   drwxr-xr-x  2  ai16  ai16  4096  Dec   3  15:28             Downloads\n",
+       "5   drwxr-xr-x  2  ai16  ai16  4096  Oct  23  14:19             Documents\n",
+       "4   drwxrwxr-x  2  ai16  ai16  4096  Oct  23  14:50                  dir2\n",
+       "3   drwxrwxr-x  2  ai16  ai16  4096  Oct  24  15:15                  dir1\n",
+       "2   drwxr-xr-x  5  ai16  ai16  4096  Nov  30  14:08               Desktop\n",
+       "1   drwxrwxr-x  2  ai16  ai16  4096  Oct  24  15:39                  day2\n",
+       "8   drwxr-xr-x  2  ai16  ai16  4096  Oct  23  14:19                 Music\n",
+       "18  drwxr-xr-x  2  ai16  ai16  4096  Oct  23  14:19                Videos"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.sort_values(4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 8.write the above dataframe obj (sorted) to a new file named lsf5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# data.to_csv(path_or_buf='~/lsf5') to create fi"
    ]
   },
   {
@@ -571,9 +1039,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# "
-   ]
+   "source": []
   }
  ],
  "metadata": {
